header.html: Changed navbar to a fixed (always visible) navbar

--- a/style.css
+++ b/style.css
@@ -509,3 +509,8 @@ button.disabled {
     transition: height 0.01s;
   }
 }
+
+/* required for fixed top nav bar */
+body {
+  padding-top: 70px;
+}
